# MiniGCS

./: .gitignore  CMakeLists.txt  LICENSE  MiniGCSConfig.cmake.in  README.md  main.cpp
Inc/: MiniGCSExport.h  QDataLink.h  QGCSConfig.h  QGCSLog.h  QGroundControlStation.h  QGroundStation.h  QVehicle.h
Inc/AirLine/: QAirLine.h  QAirLineManager.h  QDronePosition.h  QGpsPosition.h  QNEDPosition.h
Inc/Link/: QDataLink.h  QLinkManager.h  QSerialDataLink.h
Inc/Link/Private/: QDataLinkPrivate.h  QLinkManagerPrivate.h
Inc/Plat/: QAutoVehicleType.h  QAutopilot.h  QAutopilotFixedwing.h  QAutopilotStatus.h  QPlat.h
Inc/Plat/Private/: QAutopilotPrivate.h  QPlatPrivate.h
Inc/Private/: QDataLinkPrivate.h  QGroundControlStationPrivate.h  QGroundStationPrivate.h  QVehiclePrivate.h
Src/: QDataLink.cpp  QGCSConfig.cpp  QGroundControlStation.cpp  QGroundStation.cpp  QVehicle.cpp
Src/AirLine/: QAirLine.cpp  QAirLineManager.cpp  QDronePosition.cpp  QGpsPosition.cpp  QNEDPosition.cpp
Src/Link/: QDataLink.cpp  QLinkManager.cpp  QSerialDataLink.cpp
Src/Link/Private/: QDataLinkPrivate.cpp  QLinkManagerPrivate.cpp
Src/Plat/: QAutoVehicleType.cpp  QAutopilot.cpp  QAutopilotFixedwing.cpp  QAutopilotStatus.cpp  QPlat.cpp
Src/Plat/Private/: QAutopilotPrivate.cpp  QAutopilotPrivate_base.cpp  QAutopilotPrivate_control.cpp  QPlatPrivate.cpp
Src/Private/: QDataLinkPrivate.cpp  QGroundControlStationPrivate.cpp  QGroundStationPrivate.cpp  QVehiclePrivate.cpp
Test/: CMakeLists.txt  QTestGCSConfig.cpp  QTestGCSConfig.h  main.cpp
Test/Link/: QSerialDataLink.cpp  QSerialDataLink.h  QTcpClientDataLink.cpp  QTcpClientDataLink.h  QTcpServerDataLink.cpp  QTcpServerDataLink.h  QUdpClientDataLink.cpp  QUdpClientDataLink.h  QUdpServerDataLink.cpp  QUdpServerDataLink.h
Test/qml/: Main.qml
qml/: Main.qml
